# nyt-downloader

./: CONTRIBUTE.md  README.md  pyproject.toml
src/: app.py
src/core/: downloader.py  logger.py  queue.py  settings.py
src/ui/: main_window.py  widgets.py
src/utils/: helpers.py
