[project]
name = "nyt-downloader"
version = "0.1.0"
description = "A GUI-based YouTube downloader using yt-dlp"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "yt-dlp>=2023.10.13",
    "pandas>=2.0.0",
    "pillow>=9.0.0",
    "tkinter",
    "aiofiles>=23.1.0",
    "pystray>=0.19.0",
    "tktooltip>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = ["E501"]  # Ignore line length for now

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pytest.ini_options]
addopts = "-v --cov=core --cov=ui --cov-report=html"